# soar_ros

./: .buildinfo  .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  About.html  CHANGELOG.rst  CMakeLists.txt  ClassDiagram.html  README.rst  ROSInterface.html  SoftwareArchitecture.html  TestAgent.html  __readme_include.html  cspell.config.yaml  genindex.html  index.html  llm.txt  objects.inv  package.xml  pyproject.toml  requirements.txt  search.html  searchindex.js  standards.html  user_docs.html
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: About.doctree  ClassDiagram.doctree  ROSInterface.doctree  SoftwareArchitecture.doctree  TestAgent.doctree  __readme_include.doctree  environment.pickle  index.doctree  standards.doctree  user_docs.doctree
.doctrees/__intersphinx_cache__/: std_srvs_objects.inv
.doctrees/standard_docs/: CHANGELOG.doctree  CONTRIBUTING.doctree  LICENSE.doctree  PACKAGE.doctree  README.doctree
.doctrees/standard_docs/original/: CHANGELOG.doctree  CONTRIBUTING.doctree  README.doctree
.doctrees/user_docs/: About.doctree  ClassDiagram.doctree  ROSInterface.doctree  SoftwareArchitecture.doctree  TestAgent.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_test.yml  deploy_docs.yml  lint_docs.yml  package.yml
Soar/: actionClient_test.soar  benchmark.soar  benchmark_mimo.soar  init_agent.soar  input-output-deletion.soar  main.soar  preference-based-sort.soar  test_client.soar  test_input_output.soar  test_multi_agent_a.soar  test_multi_agent_b.soar  test_service.soar  test_shared_input.soar  wait.soar
_images/: graphviz-00f3f9383b9e7d25a14c433838b9ad45ec820382.png.map  graphviz-1f1178d96343584bdc9cef3ffe06a11ab79d1a73.png.map  graphviz-4289d16dac0aad533cb9424c8d9e628f9149af27.png.map  graphviz-44a7eba15294653fcc0833cb6d01e2d58f731de8.png.map  graphviz-4d102d78a2aa9c0fdb912e03f8f741170fc95d69.png.map  graphviz-4e7113c47262fa6f6f8d4f380bc45b0cbc7ba4b2.png.map  graphviz-50f92390588375bcbe34135128ebf829c5533118.png.map  graphviz-7e595071d6b92eed124923878d66edc6c6263d96.png.map  graphviz-a258076500e4a2699ec59364eb2a2a7e34944b9b.png.map  graphviz-cf62f3b591c1d9544526a92c687b6c5d12ceac41.png.map  graphviz-db0fe355ffaf7734364c7bcef52ada34031dee2e.png.map  graphviz-df647cb449a6bae1c10da135060d30ed8ead11a2.png.map  graphviz-ecedb6ead9a69352bffd104a6e1bab92e03a7b5f.png.map
_sources/: ClassDiagram.md.txt  ROSInterface.md.txt  SoftwareArchitecture.md.txt
_sources/standard_docs/original/: CHANGELOG.rst.txt  CONTRIBUTING.md.txt  README.md.txt  README.rst.txt
_sources/user_docs/: About.rst.txt  ClassDiagram.md.txt  SoftwareArchitecture.md.txt  TestAgent.md.txt
doc/: Benchmark.md  ClassDiagram.md  MessageConverters.rst  SoftwareArchitecture.md  TestAgent.md  conf.py
include/conversion/geometry_mgs/: Point.hpp
include/soar_ros/: ActionClient.hpp  Client.hpp  Interface.hpp  Publisher.hpp  SafeQueue.hpp  Service.hpp  SoarAgent.hpp  SoarRunner.hpp  Subscriber.hpp  soar_ros.hpp
include/soar_ros/msg/: action_msgs_converters.hpp  builtin_interfaces_converters.hpp  control_msgs_converters.hpp  converters.hpp  detail.hpp  diagnostic_msgs_converters.hpp  geometry_msgs_converters.hpp  moveit_msgs_converters.hpp  nav_msgs_converters.hpp  sensor_msgs_converters.hpp  std_msgs_converters.hpp  tf2_msgs_converters.hpp  trajectory_msgs_converters.hpp  visualization_msgs_converters.hpp
launch/: benchmark-send-receive.profiling.launch.py  benchmark.launch.py  benchmark_mimo.launch.py  soar_ros.launch.py
soar-ros-agent/: soar-ros-agent.soar  soar-ros-agent.vsa.json
soar-ros-agent/soar-ros-agent/: initialize-soar-ros-agent.soar  soar-ros-agent_source.soar
soar_ros/: SoftwareArchitecture.html  TestAgent.html  __readme_include.html  genindex.html  user_docs.html
soar_ros/.doctrees/: ClassDiagram.doctree  ROSInterface.doctree  SoftwareArchitecture.doctree  __readme_include.doctree  environment.pickle  index.doctree  user_docs.doctree
soar_ros/.doctrees/standard_docs/: CHANGELOG.doctree  CONTRIBUTING.doctree  README.doctree
soar_ros/.doctrees/standard_docs/original/: README.doctree
soar_ros/.doctrees/user_docs/: ClassDiagram.doctree  ROSInterface.doctree  SoftwareArchitecture.doctree
soar_ros/_downloads/38c2f3a886188ef8937e947985ae8762/: LICENSE
soar_ros/_sources/: index.rst.txt
soar_ros/_sources/standard_docs/original/: README.md.txt
soar_ros/standard_docs/: LICENSE.html  PACKAGE.html  README.html
soar_ros/standard_docs/original/: CHANGELOG.html  CONTRIBUTING.html  README.html
soar_ros/user_docs/: ROSInterface.html  SoftwareArchitecture.html  TestAgent.html
src/: SoarRunner.cpp  main.cpp  soar_ros.cpp
standard_docs/: CHANGELOG.html  CONTRIBUTING.html  LICENSE.html  PACKAGE.html  README.html
standard_docs/original/: CHANGELOG.html  CONTRIBUTING.html  README.html
test/: fibonacci_action_server.py  test_action_client.cpp  test_launch.py  test_launch_actionClient.py  test_launch_client.py  test_soar_ros.cpp
test/action_client/: fibonacci_action_server.py  test_action_client.cpp  test_launch_action_client.py
test/benchmark/: README.md  Receiver.cpp  ReceiverMIMO.cpp  Sender.cpp  SenderMIMO.cpp  System.cpp  SystemMIMO.cpp  benchmark.sh  benchmark_mimo.sh  evaluation.html  evaluation.ipynb  evaluation.py  evaluation_mimo.py  parse-logs.py  requirements.txt
test/client/: test_client.cpp  test_launch_client.py
test/msg_converters/: test_action_msgs_converters.cpp  test_builtin_interfaces_converters.cpp  test_geometry_msgs_converters.cpp  test_misc_msgs_converters.cpp  test_nav_msgs_converters.cpp  test_sensor_msgs_converters.cpp  test_soar_roundtrip.cpp  test_std_msgs_converters.cpp
test/multi_agent/: test_launch_multi_agent.py  test_launch_shared_input.py  test_multi_agent.cpp  test_shared_input.cpp
test/pubsub/: test_input_output.cpp  test_launch_input_output.py
test/service/: test_launch_service.py  test_service.cpp
user_docs/: About.html  ClassDiagram.html  ROSInterface.html  SoftwareArchitecture.html  TestAgent.html
