<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>soar_ros</name>
  <version>0.0.2</version>
  <description>An interface library to connect ROS2 with the Soar cognitive architecture.</description>
  <maintainer email="moritz.schmidt@tha.de">Moritz Schmidt</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>example_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>launch_testing_ament_cmake</depend>
  <depend>ament_index_cpp</depend>
  <!-- Required for Soar until available as rosdep key. Currently installed via fetchcontent-->
  <depend>libsqlite3-dev</depend>

  <test_depend>launch_ros</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
